<resources>
    <string name="app_name">PokeWatchlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pok_mon_name_or_id">Enter Pokémon name or ID</string>
    <string name="add">Add</string>
    <string name="ability">Ability:</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="base_xp">Base XP:</string>
    <string name="move">Move:</string>
</resources>