<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profileScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/pokemonIV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/pokemon_image"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:layout_marginBottom="16dp" />


        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />


        <TextView
            android:id="@+id/idTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_marginBottom="8dp" />


        <TextView
            android:id="@+id/heightTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_marginBottom="8dp" />


        <TextView
            android:id="@+id/weightTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginBottom="8dp" />


        <TextView
            android:id="@+id/baseXpTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_xp"
            android:layout_marginBottom="8dp" />


        <TextView
            android:id="@+id/moveTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:layout_marginBottom="8dp" />


        <TextView
            android:id="@+id/abilityTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ability"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

</ScrollView>
